2013-06-21  Zalan Bujtas  <zalan@apple.com>

        Rollout r150602: Restoring text-overflow vs. floating rendering behaviour.
        https://bugs.webkit.org/show_bug.cgi?id=117871

        Unreviewed. Rolling out r150602.
        Undesirable rendering behaviour.

        * rendering/RenderBlockLineLayout.cpp:
        (WebCore::RenderBlock::checkLinesForTextOverflow):

2013-06-21  Radu Stavila  <stavila@adobe.com>

        Web Inspector: Integrate new regionOversetChange event into inspector
        https://bugs.webkit.org/show_bug.cgi?id=117833

        Added the new regionOversetChange event to the WebInspector.

        Reviewed by Joseph Pecoraro.

        Tests:  inspector/styles/protocol-css-regions-commands.html:

        * inspector/Inspector.json:
        * inspector/InspectorCSSAgent.cpp:
        (WebCore::ChangeRegionOversetTask::ChangeRegionOversetTask):
        (WebCore::ChangeRegionOversetTask::scheduleFor):
        (WebCore::ChangeRegionOversetTask::unschedule):
        (WebCore::ChangeRegionOversetTask::reset):
        (WebCore::ChangeRegionOversetTask::onTimer):
        (WebCore::InspectorCSSAgent::resetNonPersistentData):
        (WebCore::InspectorCSSAgent::willRemoveNamedFlow):
        (WebCore::InspectorCSSAgent::didChangeRegionOverset):
        (WebCore::InspectorCSSAgent::regionOversetChanged):
        * inspector/InspectorCSSAgent.h:
        * inspector/InspectorInstrumentation.cpp:
        (WebCore::InspectorInstrumentation::didChangeRegionOversetImpl):
        * inspector/InspectorInstrumentation.h:
        (WebCore::InspectorInstrumentation::didChangeRegionOverset):
        * inspector/front-end/CSSNamedFlowCollectionsView.js:
        (WebInspector.CSSNamedFlowCollectionsView.prototype._regionOversetChanged):
        (WebInspector.CSSNamedFlowCollectionsView.prototype.wasShown):
        (WebInspector.CSSNamedFlowCollectionsView.prototype.willHide):
        * inspector/front-end/CSSStyleModel.js: