@@ -1,3 +1,13 @@
+2013-06-21  Allan Sandfeld Jensen  <allan.jensen@digia.com>
+
+        Remove Chromium-only TouchDisambiguation
+        https://bugs.webkit.org/show_bug.cgi?id=117873
+
+        Reviewed by Andreas Kling.
+
+        * page/TouchDisambiguation.cpp: Removed.
+        * page/TouchDisambiguation.h: Removed.
+
 2013-06-21  Zalan Bujtas  <zalan@apple.com>
 
         Rollout r150602: Restoring text-overflow vs. floating rendering behaviour.
